# qonverter

./: CMakeLists.txt
localization/: qonverter_cs.ts  qonverter_en.ts  qonverter_es.ts  qonverter_fr.ts  qonverter_hu.ts  qonverter_ru.ts  qonverter_vn.ts
resources/: qonverter.qrc  qonverter_win.rc.in
resources/aur/git/: PKGBUILD
resources/database/: init.sql
resources/desktop/: qonverter.desktop.in
resources/graphics/: qonverter.psd
resources/macosx/: qonverter.icns
resources/rates/: eurofxref-daily.xml
resources/skins/base/: modern.qss  plain.qss
resources/skins/fancy/: dark.qss
resources/text/: AUTHORS  CHANGELOG  COPYING_BSD
src/: balloontip.cpp  balloontip.h  database.cpp  database.h  date.cpp  date.h  dbusadaptor.cpp  dbusadaptor.h  debug.cpp  debug.h  defs.h.in  doublespinbox.cpp  doublespinbox.h  downloader.cpp  downloader.h  fontdialog.cpp  fontdialog.h  formabout.cpp  formabout.h  formmain.cpp  formmain.h  formsettings.cpp  formsettings.h  formwelcome.cpp  formwelcome.h  lineedit.cpp  lineedit.h  main.cpp  markedlineedit.cpp  markedlineedit.h  messagebox.cpp  messagebox.h  settings.cpp  settings.h  singleapplication.cpp  singleapplication.h  stackedwidget.cpp  stackedwidget.h  systemtrayicon.cpp  systemtrayicon.h  (+4 more)
src/calculator/: calculator.cpp  calculator.h  calculatorbutton.cpp  calculatorbutton.h  calculatorhighlighter.cpp  calculatorhighlighter.h  calculatorinput.cpp  calculatorinput.h  calculatorwrapper.cpp  calculatorwrapper.h  constantsfiltermodel.cpp  constantsfiltermodel.h  constantsmodel.cpp  constantsmodel.h  constantsview.cpp  constantsview.h  extensions.h  floatinglabel.cpp  floatinglabel.h  formcalculator.cpp  formcalculator.h  formeditvariable.cpp  formeditvariable.h  formvariables.cpp  formvariables.h  memorymap.cpp  memorymap.h  memoryplace.cpp  memoryplace.h
src/currencyconverter/: currencyconverter.cpp  currencyconverter.h  formcurrencyconverter.cpp  formcurrencyconverter.h
src/muparserx/: mpOprtPostfixCommon.cpp  mpParserMessageProvider.cpp  mpParserMessageProvider.h
src/unitconverter/: formunitconverter.cpp  formunitconverter.h  unitconverter.cpp  unitconverter.h
ui/: formabout.ui  formmain.ui  formsettings.ui  formwelcome.ui
ui/calculator/: formcalculator.ui  formeditvariable.ui  formvariables.ui
ui/currencyconverter/: formcurrencyconverter.ui
ui/unitconverter/: formunitconverter.ui
